# adguard-tray

./: .SRCINFO  PKGBUILD  README.md  adguard-tray.desktop  cli.py  dns_filters_tab.py  install.sh  pyproject.toml  requirements.txt
adguard_tray/: __init__.py  _allowlist.py  cli.py  config.py  diagnostics_tab.py  dns_filters_tab.py  exceptions_dialog.py  exceptions_tab.py  filters_dialog.py  filters_tab.py  i18n.py  icons.py  main.py  manager_window.py  notifications.py  overview_tab.py  proxy_config_dialog.py  settings_dialog.py  tray.py  userscripts_dialog.py  userscripts_tab.py  worker.py
