[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adguard-tray"
version = "1.6.1"
description = "System tray monitor and controller for adguard-cli"
readme = "README.md"
authors = [
    {name = "RiDDiX", email = "github@egu-rel.de"}
]
maintainers = [
    {name = "RiDDiX", email = "github@egu-rel.de"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (Windows)",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
keywords = ["adguard", "tray", "system-tray", "monitor", "ad-blocker"]
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.4.0", "PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/riddix/adguard-tray"
Repository = "https://github.com/riddix/adguard-tray.git"
Issues = "https://github.com/riddix/adguard-tray/issues"
Documentation = "https://github.com/riddix/adguard-tray#readme"

[project.scripts]
adguard-tray = "adguard_tray.main:main"

[tool.setuptools]
packages = ["adguard_tray"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "E701", "E702", "SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
